<resources>
    <string name="app_name">Calculator</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_0">0</string>
    <string name="num_equals">=</string>
    <string name="num_virgul">,</string>
    <string name="num_pulse">+</string>
    <string name="num_minus">-</string>
    <string name="num_multiply">x</string>
    <string name="num_divide">/</string>
    <string name="operation_add">OPERATION_ADD</string>
    <string name="operation_subtract">OPERATION_SUBTRACT</string>
    <string name="operation_multiply">OPERATION_MULTIPLY</string>
    <string name="operation_divide">OPERATION_DIVIDE</string>
    <string name="title_activity_scientific">ScientificActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
