<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.a73.hugo.duval.calculator.MainActivity">

    <TextView
        android:id="@+id/result"
        style="@style/Result"
        tools:text="Résultat"
        app:layout_constraintHeight_percent="0.25" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/touches"
        app:layout_constraintTop_toBottomOf="@id/result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.75">

        <Button
            style="@style/Button"
            android:id="@+id/button_7"
            android:text="@string/num_7"
            android:tag="7"
            android:onClick="clickHandler"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintWidth_percent="0.25" />
        <Button
            style="@style/Button"
            android:id="@+id/button_8"
            android:text="@string/num_8"
            android:tag="8"
            android:onClick="clickHandler"
            app:layout_constraintLeft_toRightOf="@id/button_7"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button_9"
            style="@style/Button"
            android:tag="9"
            android:text="@string/num_9"
            android:onClick="clickHandler"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintLeft_toRightOf="@id/button_8"
            app:layout_constraintWidth_percent="0.25" />


        <Button
            style="@style/Button"
            android:id="@+id/button_4"
            android:text="@string/num_4"
            android:tag="4"
            android:onClick="clickHandler"
            app:layout_constraintTop_toBottomOf="@id/button_7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintWidth_percent="0.25" />
        <Button
            style="@style/Button"
            android:id="@+id/button_5"
            android:text="@string/num_5"
            android:tag="5"
            android:onClick="clickHandler"
            app:layout_constraintTop_toBottomOf="@id/button_8"
            app:layout_constraintLeft_toRightOf="@id/button_4"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button_6"
            style="@style/Button"
            android:tag="6"
            android:text="@string/num_6"
            android:onClick="clickHandler"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintTop_toBottomOf="@id/button_9"
            app:layout_constraintLeft_toRightOf="@id/button_5"
            app:layout_constraintWidth_percent="0.25" />


        <Button
            style="@style/Button"
            android:id="@+id/button_1"
            android:text="@string/num_1"
            android:tag="1"
            android:onClick="clickHandler"
            app:layout_constraintTop_toBottomOf="@id/button_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintWidth_percent="0.25" />
        <Button
            style="@style/Button"
            android:id="@+id/button_2"
            android:text="@string/num_2"
            android:tag="2"
            android:onClick="clickHandler"
            app:layout_constraintTop_toBottomOf="@id/button_5"
            app:layout_constraintLeft_toRightOf="@id/button_1"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            android:id="@+id/button_3"
            style="@style/Button"
            android:tag="3"
            android:text="@string/num_3"
            android:onClick="clickHandler"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintTop_toBottomOf="@id/button_6"
            app:layout_constraintLeft_toRightOf="@id/button_2"
            app:layout_constraintWidth_percent="0.25" />


        <Button
            style="@style/Button"
            android:id="@+id/button_0"
            android:text="@string/num_0"
            android:tag="0"
            android:onClick="clickHandler"
            app:layout_constraintLeft_toRightOf="@id/button_virgul"
            app:layout_constraintTop_toBottomOf="@id/button_2"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintWidth_percent="0.25" />
        <Button
            style="@style/Button"
            android:id="@+id/button_del"
            android:text="DEL"
            android:tag="DEL"
            android:onClick="clickHandler"
            app:layout_constraintLeft_toRightOf="@id/button_0"
            app:layout_constraintTop_toBottomOf="@id/button_2"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            style="@style/Button"
            android:id="@+id/button_virgul"
            android:text="@string/num_virgul"
            android:tag="."
            android:onClick="clickHandler"
            app:layout_constraintTop_toBottomOf="@id/button_1"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintWidth_percent="0.25" />


        <Button
            android:id="@+id/button_equals"
            style="@style/Button_Equals"
            android:tag="="
            android:text="@string/num_equals"
            android:onClick="clickHandler"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintTop_toBottomOf="@id/button_divide"
            app:layout_constraintLeft_toRightOf="@id/button_del"
            app:layout_constraintWidth_percent="0.25" />



        <Button
            style="@style/Button_Actions"
            android:id="@+id/button_add"
            android:text="@string/num_pulse"
            android:tag="@string/operation_add"
            android:onClick="clickHandler"
            app:layout_constraintLeft_toRightOf="@id/button_9"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintWidth_percent="0.25" />
        <Button
            style="@style/Button_Actions"
            android:id="@+id/button_minus"
            android:text="@string/num_minus"
            android:tag="@string/operation_subtract"
            android:onClick="clickHandler"
            app:layout_constraintLeft_toRightOf="@id/button_6"
            app:layout_constraintTop_toBottomOf="@id/button_add"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintWidth_percent="0.25" />

        <Button
            style="@style/Button_Actions"
            android:id="@+id/button_multiply"
            android:text="@string/num_multiply"
            android:tag="@string/operation_multiply"
            android:onClick="clickHandler"
            app:layout_constraintLeft_toRightOf="@id/button_3"
            app:layout_constraintTop_toBottomOf="@id/button_minus"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintWidth_percent="0.25" />
        <Button
            style="@style/Button_Actions"
            android:id="@+id/button_divide"
            android:text="@string/num_divide"
            android:tag="@string/operation_divide"
            android:onClick="clickHandler"
            app:layout_constraintLeft_toRightOf="@id/button_3"
            app:layout_constraintTop_toBottomOf="@id/button_multiply"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintWidth_percent="0.25" />

    </android.support.constraint.ConstraintLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="Night"
        android:onClick="clickNightHandler"
        android:padding="10dp"
        android:src="?attr/iconDayTime"
        app:layout_constraintLeft_toLeftOf="@id/result"
        app:layout_constraintTop_toTopOf="@id/result" />
    <ImageButton
        android:id="@+id/menuButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="Night"
        android:onClick="clickMenuHandler"
        android:padding="10dp"
        android:src="@drawable/ic_menu_black_24dp"
        app:layout_constraintRight_toRightOf="@id/result"
        app:layout_constraintTop_toTopOf="@id/result" />



</android.support.constraint.ConstraintLayout>
